minor fixes, text size, gaps

--- a/main.css
+++ b/main.css
@@ -70,11 +70,11 @@
 }
 
 #domain-line {
-  margin-top: 15px;
+  margin: 10px 4px 2px 4px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px 5px;
   color: white;
 }
 
@@ -86,6 +86,7 @@
   padding: 4px 12px;
   text-transform: uppercase;
   cursor: pointer;
+  width: fit-content;
 }
 
 ul {
@@ -94,6 +95,7 @@ ul {
 
 li {
   margin: 7px 0 7px 0;
+  font-size: 1rem;
 }
 
 #links {
@@ -122,10 +124,11 @@ li {
 
 #connect-links {
   color: white;
+  font-size: 1.25rem;
 }
 
 #connect h3 {
-  font-size: 2.6rem;
+  font-size: 2.1rem;
   font-weight: 500;
   text-align: center;
   color: white;
@@ -149,5 +152,9 @@ li {
   .card {
     width: 107%;
     margin-top: 0rem;
+  }
+
+  li {
+    font-size: 11.4px;
   }
 }
